# mythos

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mythos-api/: Cargo.toml
crates/mythos-api/src/: activity.rs  auth.rs  error.rs  hls.rs  lib.rs  library.rs  movie.rs  play.rs  scan.rs  settings.rs  stream.rs  subtitles.rs  tv.rs
crates/mythos-api/tests/: auth.rs  continue_watching.rs  episode_stream.rs  hls.rs  library.rs  scan.rs  stream.rs
crates/mythos-auth/: Cargo.toml
crates/mythos-auth/src/: error.rs  extractor.rs  lib.rs  password.rs  token.rs  user.rs
crates/mythos-auth/tests/: password.rs  token.rs
crates/mythos-core/: Cargo.toml
crates/mythos-core/src/: activity.rs  ffmpeg.rs  lib.rs  library.rs  media.rs  movie.rs  profile.rs  subtitle.rs  tv.rs
crates/mythos-db/: Cargo.toml
crates/mythos-db/src/: activity.rs  episode.rs  episode_progress.rs  lib.rs  library.rs  media_file.rs  movie.rs  progress.rs  season.rs  series.rs  settings.rs  subtitle.rs
crates/mythos-meta/: Cargo.toml
crates/mythos-meta/src/: lib.rs  tmdb.rs
crates/mythos-meta/tests/: tmdb.rs
crates/mythos-scan/: Cargo.toml
crates/mythos-scan/src/: identify.rs  identify_tv.rs  lib.rs  movies.rs  probe.rs  scan.rs  tv.rs  walk.rs
crates/mythos-scan/tests/: scan.rs  scan_tv.rs
crates/mythos-server/: Cargo.toml  build.rs
crates/mythos-server/src/: config.rs  main.rs  secret.rs  web.rs
crates/mythos-stream/: Cargo.toml
crates/mythos-stream/src/: abr.rs  hwaccel.rs  lib.rs  transcode.rs
crates/mythos-stream/tests/: transcode.rs
migrations/: 0001_initial.sql  0002_user_token_version.sql  0003_libraries_unique_root.sql  0004_movies_media_files.sql  0005_movie_progress.sql  0006_media_subtitles.sql  0007_settings.sql  0008_tv.sql  0009_media_color_metadata.sql
web/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.d.ts
web/src/lib/: api.ts  auth.svelte.ts  auth.test.ts  continue-watching.ts  libraries.ts  movies.ts  profile.ts  settings.ts  tv.ts
web/src/lib/player/: Player.svelte  playback.test.ts  playback.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
web/src/routes/admin/libraries/: +page.svelte
web/src/routes/admin/settings/: +page.svelte
web/src/routes/episodes/[id]/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/movie/[id]/: +page.svelte
web/src/routes/series/[id]/: +page.svelte
web/src/routes/setup/: +page.svelte
