[workspace]
resolver = "3"
members = [
    "crates/mythos-server",
    "crates/mythos-core",
    "crates/mythos-db",
    "crates/mythos-scan",
    "crates/mythos-meta",
    "crates/mythos-stream",
    "crates/mythos-api",
    "crates/mythos-auth",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mattmoore/mythos"

[workspace.dependencies]
mythos-core = { path = "crates/mythos-core" }
mythos-db = { path = "crates/mythos-db" }
mythos-scan = { path = "crates/mythos-scan" }
mythos-meta = { path = "crates/mythos-meta" }
mythos-stream = { path = "crates/mythos-stream" }
mythos-api = { path = "crates/mythos-api" }
mythos-auth = { path = "crates/mythos-auth" }

axum = { version = "0.8", features = ["macros", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-br", "compression-gzip"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"

uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
cookie = "0.18"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }

rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

jwalk = "0.8"
notify = "8"
walkdir = "2"

lofty = "0.22"
kamadak-exif = "0.6"

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = { version = "5", features = ["image"] }

regex = "1"
once_cell = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
