[package]
name = "mythos-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API routers and handlers for Mythos"

[dependencies]
mythos-core.workspace = true
mythos-db.workspace = true
mythos-auth.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
cookie.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
jsonwebtoken.workspace = true
chrono.workspace = true
