[package]
name = "mythos-meta"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "External metadata providers (TMDb, MusicBrainz, OpenLibrary) for Mythos"

[dependencies]
mythos-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
chrono.workspace = true
