[package]
name = "mythos-scan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem scanner and identifier for Mythos"

[dependencies]
mythos-core.workspace = true
mythos-db.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
jwalk.workspace = true
notify.workspace = true
walkdir.workspace = true
regex.workspace = true
