[package]
name = "mythos-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mythos media server binary"
default-run = "mythos-server"

[[bin]]
name = "mythos-server"
path = "src/main.rs"

[dependencies]
mythos-core.workspace = true
mythos-db.workspace = true
mythos-api.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
hyper.workspace = true

serde.workspace = true
serde_json.workspace = true
figment.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
thiserror.workspace = true

rust-embed.workspace = true
mime_guess.workspace = true
